# kody

Projekt_magazyn/: CMakeLists.txt  Lista_magazynow.cpp  Lista_magazynow.h  Magazyn.cpp  Magazyn.h  Paleciak.cpp  Paleciak.h  Produkt.h  Towar_ciekly.cpp  Towar_ciekly.h  Towar_na_sztuki.cpp  Towar_na_sztuki.h  Towar_sypki.cpp  Towar_sypki.h  funkcje_pomocnicze.h  menu.h  obsluga_funkcji_menu.h
lab1/: sito.ps1  zad1.ps1  zad2.ps1
lab2/: zad1.ps1  zad1.txt  zad2.ps1  zad2.txt  zad3.ps1  zad3.txt
lab3/: Lab 3.docx  zad1.ps1  zad2.ps1  zad3.ps1  zad4.ps1  zad5.ps1  zad6.ps1  zad7.ps1  zad8.ps1
lab5/: baza_danych.json  niepotrzebne.ps1  powtorzone.txt  projekt2.ps1
lab5/d1/: as.txt  bb.txt  c.txt  dasa.txt  tekst  wd1.pptx
lab5/d1/d2/: a.txt  wd2.pptx
lab5/d1/d4/: S.xlsx
lab5/zad2/: Photoshop.lnk
lab6/: cw6.sql  harmo.ps1  zad1.ps1  zad2.ps1  zad3.ps1  zad4.ps1
project_calendar/: button.py  day.py  file.py  hour.py  main.py  menu.py  month.py  save_file.txt  year.py
projekt/: covid.ps1  find_duplicates.ps1  monitor-partitions_space.ps1  monitor-ram_cpu.ps1
snake/src/: GameFrame.java  GamePanel.java  SnakeGAme.java
